[#34] Rishab/Bhawna - Fix alignment
What changes have you made?

* Fix alignment of player name with hand and others hand
* Fix alignment of pass button
* Modify height of top, bottom and middle table - gave equal height

Why do we need this change?

* To fix the alignment problem

What can this change impact?

* To give a better UI experience

--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -16,7 +16,7 @@ body {
 
 .top-table {
   width: 100%;
-  height: 30%;
+  height: 33.33%;
 
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@ body {
 
 .middle-table {
   width: 100%;
-  height: 40%;
+  height: 33.33%;
 
   display: flex;
   flex-direction: row;
@@ -83,6 +83,7 @@ body {
 
 .cards-on-table {
   width: 70%;
+  height: 70%;
 
   display: flex;
   flex-direction: row;
@@ -91,7 +92,7 @@ body {
 
 .bottom-table {
   width: 100%;
-  height: 30%;
+  height: 33.33%;
 
   display: flex;
   flex-direction: column;
@@ -104,13 +105,10 @@ body {
 .player {
   width: 100%;
   height: 100%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-
-  /* background-color: aquamarine; */
+  justify-content: center;
 }
 
 .otherPlayer {
@@ -119,22 +117,17 @@ body {
 }
 
 .hand {
-  margin-left: 10%;
   width: 100%;
-  height: 80%;
-
+  height: 70%;
   overflow: hidden;
-
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .other-hand {
-  margin-left: 10%;
-  width: 95%;
-  height: 95%;
-
+  width: 100%;
+  height: 70%;
   overflow: hidden;
 
   display: flex;
@@ -312,9 +305,7 @@ body {
 
 .pass {
   width: 10%;
-  height: 70%;
   text-align: center;
-  line-height: 2.5;
   cursor: pointer;
   background-color: black;
   color: white;
